--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,7 @@
 <html>
   <head>
     <title>Time Timer</title>
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta name="theme-color" content="#292929" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="icon" href="graphics/favicon.ico" />
